@@ -2,6 +2,7 @@ Revision history for MS
 
 0.204002 2020-02-13
         Fix ImzML SHA-1 hashing on Windows (use binary mode)
+        Use 'any' from List::MoreUtils to satisfy pre-5.20 perls
 
 0.204001 2019-09-20
         Yet another attempt to address versioning inconsistency
